Feat: Parameter added for swagger ui
